// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withdraw xTokens should be correct withdraw config 1`] = `
{
  "balance": "<BALANCE>",
  "destination": {
    "parachainId": 1000,
  },
  "feePerWeight": 8,
  "getParams": [Function],
  "sourceMinBalance": undefined,
  "weight": 4000000000,
  "xcmFeeAsset": undefined,
}
`;

exports[`withdraw xTokens should get params with parachain id 1`] = `
[
  1,
  [
    "0x00000003e8",
    "0x01ef46c7649270c912704fb09b75097f6e32208b8500",
  ],
]
`;

exports[`withdraw xTokens should get params without parachain id 1`] = `
[
  1,
  [
    "0x01ef46c7649270c912704fb09b75097f6e32208b8500",
  ],
]
`;
